<resources>
    <string name="app_name">SecretRecoder</string>
    <string name="permission_title">This is a required privilege to use the application.</string>
    <string name="record_permission">Permission to run Sound Recorder</string>
    <string name="write_permission">Permission to save recorded files</string>
    <string name="overlay_permission">Permission to run the button on the screen</string>
    <string name="confirm">Confirm</string>
    <string name="denied">Denied</string>
    <string name="showRecordList">RecordList</string>
    <string name="searchHint">search..</string>
    <string name="settings">Setting</string>
    <string name="RecordButtonSwitch">Record Button Switch</string>
    <string name="transparent">Transparent</string>
    <string name="lockscreen">Overlay Lockscreen</string>
    <string name="SettingButtonSwitch">Settings Button Switch</string>
</resources>
