<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="#99000000"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/line01"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/line01"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RelativeLayout
            android:id="@+id/buttonSwitchLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line01">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:text="@string/RecordButtonSwitch"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/recoderSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:checked="false"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom" />

        </RelativeLayout>

        <View
            android:id="@+id/line02"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/whiteColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSwitchLayout" />

        <RelativeLayout
            android:id="@+id/settingSwitchLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line02">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:text="@string/SettingButtonSwitch"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/settingSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:checked="false"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom" />

        </RelativeLayout>

        <View
            android:id="@+id/line03"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/whiteColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingSwitchLayout" />

        <RelativeLayout
            android:id="@+id/buttontransparentLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line03">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:text="@string/transparent"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />


            <SeekBar
                android:id="@+id/transparentSeekbar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <View
            android:id="@+id/line04"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/whiteColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttontransparentLayout" />

        <RelativeLayout
            android:id="@+id/buttonLockscreenLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttontransparentLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:text="@string/lockscreen"
                android:textColor="@color/whiteColor"
                android:textSize="12sp" />

            <Switch
                android:id="@+id/lockscreenSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:checked="false"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom" />

        </RelativeLayout>

        <View
            android:id="@+id/line05"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/whiteColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLockscreenLayout" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</android.support.constraint.ConstraintLayout>